--- a/index.html
+++ b/index.html
@@ -484,9 +484,11 @@
             <main class="contact-body">
 
                 <!-- Form -->
-                <form id="contact-form" name="contact" method="POST" data-netlify="true" action="/">
-                    <input type="hidden" name="form-name" value="contact" />
-                    <input type="hidden" name="_to" value="yedidiah@aleph.vc" />
+                <form id="contact-form" method="POST" action="https://formsubmit.co/yedidiah@aleph.vc">
+                    <input type="hidden" name="_subject" value="MoonPac Website - New Contact" />
+                    <input type="hidden" name="_captcha" value="false" />
+                    <input type="hidden" name="_template" value="table" />
+                    <input type="text" name="_honey" style="display:none" />
 
                     <div class="hero-label">Get in Touch</div>
                     <h2>We'd like to hear from you</h2>
@@ -551,20 +553,27 @@
             if (e.key === 'Escape') closeContact();
         });
 
-        // Handle form submission
+        // Handle form submission via FormSubmit.co
         document.getElementById('contact-form').addEventListener('submit', function(e) {
             e.preventDefault();
             var form = e.target;
             var data = new FormData(form);
+            var submitBtn = form.querySelector('.form-submit');
+            submitBtn.textContent = 'Sending...';
+            submitBtn.disabled = true;
 
-            fetch('/', {
+            fetch(form.action, {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                body: new URLSearchParams(data).toString()
+                body: data,
+                headers: { 'Accept': 'application/json' }
             })
-            .then(function() {
-                form.style.display = 'none';
-                document.getElementById('form-success').style.display = 'block';
+            .then(function(response) {
+                if (response.ok) {
+                    form.style.display = 'none';
+                    document.getElementById('form-success').style.display = 'block';
+                } else {
+                    throw new Error('Form submission failed');
+                }
             })
             .catch(function() {
                 // Fallback: mailto
@@ -575,6 +584,8 @@
                 var subject = 'MoonPac Contact: ' + name;
                 var body = 'Name: ' + name + '\nEmail: ' + email + '\nCompany: ' + company + '\n\n' + message;
                 window.location.href = 'mailto:yedidiah@aleph.vc?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(body);
+                submitBtn.textContent = 'Send Message';
+                submitBtn.disabled = false;
             });
         });
     </script>
