Add GitHub Pages deployment workflow

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <div class="page">
 
         <nav>
-            <a href="/" class="logo-text">MoonPac</a>
+            <a href="index.html" class="logo-text">MoonPac</a>
             <button class="nav-contact" onclick="openContact()">Contact</button>
         </nav>
 
@@ -477,7 +477,7 @@
         <div class="page">
 
             <nav>
-                <a href="/" class="logo-text">MoonPac</a>
+                <a href="index.html" class="logo-text">MoonPac</a>
                 <button class="nav-back" onclick="closeContact()">Back</button>
             </nav>
 
